--- a/src/Views/login.phtml
+++ b/src/Views/login.phtml
@@ -1,22 +1,54 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+    <title>Morson Login</title>
+
 </head>
+
 <body>
-<div class="container">
-    <form action="login.phtml" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
+<div class="container" id="container">
 
-        <input type="submit" value="Login">
-    </form>
+    <div class="form-container sign-in">
+
+        <form>
+
+            <h1> <u> Sign In</u> </h1>
+            <input type="email" placeholder="Email">
+            <input type="password" placeholder="Password">
+            <button>Sign In</button>
+
+        </form>
+
+    </div>
+
+
+
+    <div class="toggle-container">
+
+        <div class="toggle">
+
+            <div class="toggle-panel toggle-right">
+
+                <h1>We are the Morson Group: Placing People First</h1>
+                <p>We’re creating a better, more innovative world – inspiring, supporting, reskilling and nurturing the talent of today, tomorrow and the future.</p>
+
+            </div>
+
+        </div>
+
+
+    </div>
+
 </div>
+
 </body>
+
 </html>
