--- a/src/Views/style.css
+++ b/src/Views/style.css
@@ -1,61 +1,178 @@
-body {
+
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: Poppins ,  Medium;
 }
 
-.container {
-    width: 350px;
-    padding: 250px;
-    background-color: rgba(255, 255, 255, 0.8);
-    margin: 0 auto;
-    margin-top: 100px;
-    border: 1px solid black;
-    border-radius: 4px;
-    animation: fadeIn 2s;
-}
-
-form {
+body{
+    background-color: #c9d6ff;
+    background: linear-gradient(to right, rgba(248, 248, 248, 0.55), rgb(255, 255, 255));
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
+    height: 100vh;
 }
 
-label {
-    margin-bottom: 5px;
+.container{
+    background-color: #1c2357;
+    border-radius: 70px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
+    position: relative;
+    overflow: hidden;
+    width: 1200px;
+    max-width: 100%;
+    min-height: 850px;
 }
 
-input[type="text"],
-input[type="password"] {
-    margin-bottom: 15px;
-    padding: 8px;
-    border: 1px solid #575A7C;
-    border-radius: 4px;
-    transition: border-color 0.3s ease;
+.container p{
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: 0.3px;
+    margin: 45px 0;
 }
 
-input[type="text"]:hover,
-input[type="password"]:hover {
-    border-color: #4CAF50;
+.container span{
+    font-size: 12px;
 }
 
-input[type="submit"] {
-    background: linear-gradient(to right, #4CAF50, #45a049);
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
+.container a{
+    color: #333;
+    font-size: 13px;
+    text-decoration: none;
+    margin: 15px 0 10px;
+}
+
+.container button{
+    background-color: #C8102E;
+    color: #ffffff;
+    font-size: 12px;
+    padding: 15px 65px;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+    margin-top: 10px;
     cursor: pointer;
-    transition: background 0.3s ease;
 }
 
-input[type="submit"]:hover {
-    background: linear-gradient(to right, #45a049, #4CAF50);
+.container button.hidden{
+    background-color: transparent;
+    border-color: #fff;
 }
 
-@keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 1;
-    }
+.container form{
+    background-color: #1c2357;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    height: 100%;
 }
+
+.form-container h1{
+    color: #ffffff;
+    font-size: 29px;
+    padding: 15px 100px;
+}
+.container input{
+    background-color: #eee;
+    border: none;
+    margin: 8px ;
+    padding: 12px 10px;
+    font-size: 14px;
+    border-radius: 50px;
+    width: 100%;
+    outline: none;
+}
+
+.form-container{
+    position: absolute;
+    top: 0;
+    height: 100%;
+    transition: all 0.6s ease-in-out;
+}
+
+.sign-in{
+    left: 0;
+    width: 50%;
+    z-index: 2;
+}
+
+.container.active .sign-in{
+    transform: translateX(100%);
+}
+
+
+
+.toggle-container{
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    transition: all 2s ease-in-out;
+    border-radius:500px 1px 1px 0px;
+    z-index: 1500;
+
+}
+
+
+.toggle{
+    background-color: #fdfdfd;
+    height: 100%;
+    background: linear-gradient(to right, #C8102E, #D2515E);
+    color: #fff;
+    position: relative;
+    left: -100%;
+    height: 100%;
+    width: 200%;
+    transform: translateX(0);
+    transition: all 0.6s ease-in-out;
+}
+
+.container.active .toggle{
+    transform: translateX(50%);
+}
+
+.toggle-panel{
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 30px;
+    text-align: center;
+    top: 0;
+    transform: translateX(0);
+    transition: all 0.6s ease-in-out;
+}
+
+.toggle-left{
+    transform: translateX(-200%);
+}
+
+.container.active .toggle-left{
+    transform: translateX(0);
+}
+
+.toggle-right{
+    right: 0;
+    transform: translateX(0);
+}
+
+.container.active .toggle-right{
+    transform: translateX(200%);
+}
+
+
+
+sx
