Update style for pages so they match.

--- a/src/Views/hr.phtml
+++ b/src/Views/hr.phtml
@@ -19,16 +19,16 @@
             background-color: #22272E;
             color: #fff;
             text-align: center;
-            padding: 50px 20px;
+            padding: 50px 20px; /* Updated padding */
             border-bottom: 10px solid #000;
             display: flex;
-            align-items: flex-start;
-            justify-content: flex-start;
+            align-items: flex-start; /* Updated alignment */
+            justify-content: flex-start; /* Updated justification */
         }
 
         h1 {
             font-size: 64px;
-            margin: 10px;
+            margin-top: 10px;
             flex: 1;
             text-align: center;
             align-items: center;
@@ -40,8 +40,8 @@
         }
 
         header img {
-            max-height: 65px;
-            margin-right: 10px;
+            max-height: 65px; /* Updated max-height */
+            margin-right: 10px; /* Updated margin-right */
         }
 
         section {
@@ -58,7 +58,6 @@
             padding: 20px;
             height: 100%; /* Set a fixed height for each data-section */
         }
-
 
         footer {
             background-color: #00008b;
