--- a/src/Views/commercialAndAccounts.phtml
+++ b/src/Views/commercialAndAccounts.phtml
@@ -19,11 +19,11 @@
             background-color: #279989;
             color: #fff;
             text-align: center;
-            padding: 50px 20px; /* Updated padding */
+            padding: 50px 20px;
             border-bottom: 10px solid #000;
             display: flex;
-            align-items: flex-start; /* Updated alignment */
-            justify-content: flex-start; /* Updated justification */
+            align-items: flex-start;
+            justify-content: flex-start;
         }
 
         h1 {
@@ -34,14 +34,14 @@
             align-items: center;
             justify-content: center;
             display: flex;
-            position: relative; /* Added */
-            top: 60px; /* Added */
-            left: -130px; /* Added */
+            position: relative;
+            top: 60px;
+            left: -130px;
         }
 
         header img {
-            max-height: 65px; /* Updated max-height */
-            margin-right: 10px; /* Updated margin-right */
+            max-height: 65px;
+            margin-right: 10px;
         }
 
         section {
@@ -56,7 +56,7 @@
             flex: 1;
             text-align: center;
             padding: 20px;
-            height: 100%; /* Set a fixed height for each data-section */
+            height: 100%;
         }
 
         footer {
