--- a/src/Views/business.phtml
+++ b/src/Views/business.phtml
@@ -78,17 +78,19 @@
 <section>
     <div class="data-section">
         <h2>Number of live bids</h2>
-        <p><?php echo $view->businessDataSet->getLiveBids(); ?></p>
+        <p><?php /** @var $view */
+            echo $view->departmentDataSet['business_development']['live_bids']; ?>
+        </p>
     </div>
 
     <div class="data-section">
         <h2>Total Bids</h2>
-        <p><?php echo '£' . number_format($view->businessDataSet->getValueLiveBids()); ?></p>
+        <p><?php echo '£' . number_format($view->departmentDataSet['business_development']['value_live_bids']); ?></p>
     </div>
 
     <div class="data-section">
         <h2>Number of current leads</h2>
-        <p><?php echo $view->businessDataSet->getCurrentLeads(); ?></p>
+        <p><?php echo $view->departmentDataSet['business_development']['current_leads']; ?></p>
     </div>
 </section>
 
@@ -96,7 +98,6 @@
     <p>sample text</p>
 </footer>
 
-<!-- Add more sections or content as needed -->
 
 </body>
 </html>
