--- a/src/Views/hr.phtml
+++ b/src/Views/hr.phtml
@@ -79,19 +79,18 @@
 <section>
     <div class="data-section">
         <h2>HR Bulletin</h2>
-        <p>Data for section 1 goes here.</p>
+        <p><?php /** @var TYPE_NAME $view */
+            echo $view->departmentDataSet['human_resources']['human_resources_bulletin'] ?></p>
     </div>
 
     <div class="data-section">
         <h2>Upcoming Bank Holidays</h2>
-        <p>New Year's Day - January 1st 2024</p>
-        <p>Spring Bank Holiday - May 27th 2024</p>
-        <p>Good Friday - March 29th 2024</p>
+        <p><?php echo $view->departmentDataSet['human_resources']['bank_holiday'] ?></p>
     </div>
 
     <div class="data-section">
         <h2>Benefit Announcements</h2>
-        <p>Data for section 3 goes here.</p>
+        <p><?php echo $view->departmentDataSet['human_resources']['benefits_announcements'] ?></p>
     </div>
 </section>
 
@@ -103,3 +102,8 @@
 
 </body>
 </html>
+<script>
+    setTimeout(function(){
+        window.location.reload(1);
+    }, 30000);
+</script>
