--- a/src/Views/itAndSystems.phtml
+++ b/src/Views/itAndSystems.phtml
@@ -77,17 +77,27 @@
 <section>
     <div class="data-section">
         <h2>Scheduled Outages</h2>
-        <p>04/01/2024 @ 18:00-20:00.</p>
+        <?php if (isset($view->departmentDataSet['it_and_systems']['scheduled_outages'])): ?>
+            <p><?php echo $view->departmentDataSet['it_and_systems']['scheduled_outages']; ?></p>
+        <?php else: ?>
+            <p>No scheduled outages data available.</p>
+        <?php endif; ?>
     </div>
 
     <div class="data-section">
         <h2>System Status</h2>
-        <p style="color: #AAFF00;"> Online</p>
+        <?php foreach ($view->departmentDataSet['it_and_systems_software'] as $row): ?>
+            <p><strong>Software:</strong> <?php echo $row['software']; ?></p>
+            <p><strong>Build Status:</strong> <?php echo $row['build_status']; ?></p>
+        <?php endforeach; ?>
     </div>
 
     <div class="data-section">
         <h2>Build Status - Software</h2>
-        <p>95%</p>
+        <?php foreach ($view->departmentDataSet['it_and_systems_status'] as $row): ?>
+            <p><strong>System:</strong> <?php echo $row['system']; ?></p>
+            <p><strong>System:</strong> <?php echo $row['status']; ?></p>
+        <?php endforeach; ?>
     </div>
 </section>
 
@@ -99,3 +109,8 @@
 
 </body>
 </html>
+<script>
+    setTimeout(function(){
+        window.location.reload(1);
+    }, 30000);
+</script>
