Add path to login page
Clicking on the Morson logo will navigate the user to the login page

--- a/src/Views/healthAndSafety.phtml
+++ b/src/Views/healthAndSafety.phtml
@@ -78,7 +78,9 @@
 <body>
 
 <header>
-    <img src="/Views/Images/morson.png" alt="">
+    <a href="login.php" class="booton">
+        <img src="/Views/Images/morson.png" alt="">
+    </a>
     <h1 style='position:relative; top:60px; left:-130px'>Health and Safety</h1>
 </header>
 
