--- a/src/Views/hr.phtml
+++ b/src/Views/hr.phtml
@@ -78,7 +78,9 @@
 <body>
 
 <header>
-    <img src="/Views/Images/morson.png" alt="Morson logo">
+    <a href="login.php" class="booton">
+        <img src="/Views/Images/morson.png" alt="">
+    </a>
     <h1 style='position:relative; top:60px; left:-130px'>Human Resources</h1>
 </header>
 
