--- a/src/Views/mystyles.css
+++ b/src/Views/mystyles.css
@@ -64,4 +64,15 @@ footer {
     position: relative;
 }
 
+.disclaimer-section {
+    position: fixed;
+    bottom: 60px;
+    right: 10px;
+    background-color: #fff; /* Add background color as needed */
+    padding: 10px;
+    border: 1px solid #000; /* Add border as needed */
+    border-radius: 5px; /* Add border-radius for rounded corners */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add box shadow for a subtle effect */
+}
+
 
