--- a/src/Views/commercialAndAccounts.phtml
+++ b/src/Views/commercialAndAccounts.phtml
@@ -56,7 +56,7 @@
             flex: 1;
             text-align: center;
             padding: 20px;
-            height: 580px;
+            height: 630px;
             position: relative;
             border-right: 4px solid #000; /* Add a black right border */
         }
@@ -90,24 +90,24 @@
 
 <header>
     <img src="/Views/Images/morson.png" alt="">
-    <h1 style='position:relative; top:60px; left:-130px'>Commerical and Accounts</h1>
+    <h1 style='position:relative; top:60px; left:-130px; font-size: 7em'>Commerical and Accounts</h1>
 </header>
 
 <section>
     <div class="data-section">
-        <h2>What day is Payday?</h2>
-        <p>Payday is: <?php /** @var $view */
+        <h2 style="font-size: 4em">What day is Payday?</h2>
+        <p style="font-size: 4em">Payday is: <?php /** @var $view */
             echo $view->departmentDataSet['commercial_and_accounts']['payday'];?></p>
     </div>
 
     <div class="data-section">
-        <h2>Payroll Bulletins</h2>
-        <p><?php echo $view->departmentDataSet['commercial_and_accounts']['payroll_bulletin'] ?></p>
+        <h2 style="font-size: 4em">Payroll Bulletins</h2>
+        <p style="font-size: 4em"><?php echo $view->departmentDataSet['commercial_and_accounts']['payroll_bulletin'] ?></p>
     </div>
 
     <div class="data-section">
-        <h2>Best Performing Projects</h2>
-        <p><?php echo $view->departmentDataSet['commercial_and_accounts']['best_performing_projects'] ?></p>
+        <h2 style="font-size: 4em">Best Performing Projects</h2>
+        <p style="font-size: 4em"><?php echo $view->departmentDataSet['commercial_and_accounts']['best_performing_projects'] ?></p>
     </div>
 </section>
 
