--- a/src/Views/healthAndSafety.phtml
+++ b/src/Views/healthAndSafety.phtml
@@ -56,7 +56,7 @@
             flex: 1;
             text-align: center;
             padding: 20px;
-            height: 580px;
+            height: 630px;
             position: relative;
             border-right: 4px solid #000; /* Add a black right border */
         }
@@ -90,25 +90,25 @@
 
 <header>
     <img src="/Views/Images/morson.png" alt="">
-    <h1 style='position:relative; top:60px; left:-130px'>Health and Safety</h1>
+    <h1 style='position:relative; top:60px; left:-130px; font-size: 7em'>Health and Safety</h1>
 </header>
 
 <section>
     <div class="data-section">
-        <h2>Total Accidents</h2>
-        <p><?php /** @var TYPE_NAME $view */
+        <h2 style="font-size: 4em">Total Accidents</h2>
+        <p style="font-size: 4em"><?php /** @var TYPE_NAME $view */
             echo $view->departmentDataSet['health_and_safety']['accidents'] ?></p>
     </div>
 
     <div class="data-section">
-        <h2>Health and Safety Bulletin</h2>
-        <p><?php echo $view->departmentDataSet['health_and_safety']['monthly_bulletin'] ?></p>
+        <h2 style="font-size: 4em">Health and Safety Bulletin</h2>
+        <p style="font-size: 4em"><?php echo $view->departmentDataSet['health_and_safety']['monthly_bulletin'] ?></p>
 
     </div>
 
     <div class="data-section">
-        <h2>Absences</h2>
-        <p><?php echo $view->departmentDataSet['health_and_safety']['absences'] ?></p>
+        <h2 style="font-size: 4em">Absences</h2>
+        <p style="font-size: 4em"><?php echo $view->departmentDataSet['health_and_safety']['absences'] ?></p>
     </div>
 </section>
 
