Update pages to use better logo png

--- a/src/Views/commercialAndAccounts.phtml
+++ b/src/Views/commercialAndAccounts.phtml
@@ -89,7 +89,7 @@
 <body>
 
 <header>
-    <img src="/Views/Images/morson.png" alt="">
+    <img src="/Views/Images/morson-white.png" alt="">
     <h1 style='position:relative; top:60px; left:-130px; font-size: 7em'>Commerical and Accounts</h1>
 </header>
 
