--- a/src/Views/business.phtml
+++ b/src/Views/business.phtml
@@ -87,7 +87,7 @@
 <body>
 
 <header>
-    <img src="/Views/Images/morson.png" alt="">
+    <img src="/Views/Images/morson-white.png" alt="">
     <h1 style='position:relative; top:60px; left:-130px; font-size: 7em'>Business Development Updates</h1>
 
 
