--- a/src/Views/hr.phtml
+++ b/src/Views/hr.phtml
@@ -89,7 +89,7 @@
 <body>
 
 <header>
-    <img src="/Views/Images/morson.png" alt="Morson logo">
+    <img src="/Views/Images/morson-white.png" alt="">
     <h1 style='position:relative; top:60px; left:-130px'>Human Resources</h1>
 </header>
 
