--- a/src/Views/itAndSystems.phtml
+++ b/src/Views/itAndSystems.phtml
@@ -17,7 +17,7 @@
 
 
 <header>
-    <img src="/Views/Images/morson.png" alt="">
+    <img src="/Views/Images/morson-white.png" alt="">
     <h1 style='position:relative; top:60px; left:-130px; font-size: 7em'>IT and Systems</h1>
 </header>
 
