Finalise style for final demo.

--- a/src/Views/itAndSystems.phtml
+++ b/src/Views/itAndSystems.phtml
@@ -35,8 +35,8 @@
         <h2 style="font-size: 4em">Build Status - Software</h2>
 
             <?php foreach ($view->departmentDataSet['it_and_systems_status'] as $row): ?>
-                <p style="font-size: 2em; margin: 5px"><strong>System:</strong> <?php echo $row['system']; ?></p>
-                <p style="font-size: 2em; margin: 5px"><strong>Status:</strong> <?php echo $row['status']; ?></p>
+                <p style="font-size: 34px; margin: 5px"><strong>System:</strong> <?php echo $row['system']; ?></p>
+                <p style="font-size: 34px; margin: 5px"><strong>Status:</strong> <?php echo $row['status']; ?></p>
             <?php endforeach; ?>
 
 
