--- a/src/Views/adminpage.phtml
+++ b/src/Views/adminpage.phtml
@@ -94,7 +94,7 @@
 </section>
 
 <div class="disclaimer-section">
-    <p>DISCLAIMER: [HackCamp Project]</p>
+    <p style="font-size: 20px; color:red">DISCLAIMER: [This is a HackCamp Project, and does not reflect the views of Morson Projects, or Morson Group.]</p>
 </div>
 
 <!-- JavaScript to handle the button click event -->
