--- a/src/Views/hr.phtml
+++ b/src/Views/hr.phtml
@@ -117,7 +117,7 @@
 </footer>
 
 <div class="disclaimer-section">
-    <p>DISCLAIMER: [HackCamp Project]</p>
+    <p style="font-size: 20px; color:red">DISCLAIMER: [This is a HackCamp Project, and does not reflect the views of Morson Projects, or Morson Group.]</p>
 </div>
 
 <!-- Add more sections or content as needed -->
