--- a/src/Views/hr.phtml
+++ b/src/Views/hr.phtml
@@ -56,7 +56,7 @@
             flex: 1;
             text-align: center;
             padding: 20px;
-            height: 630px;
+            height: 1000px;
             position: relative;
             border-right: 4px solid #000; /* Add a black right border */
         }
@@ -90,7 +90,7 @@
 
 <header>
     <img src="/Views/Images/morson-white.png" alt="">
-    <h1 style='position:relative; top:60px; left:-130px'>Human Resources</h1>
+    <h1 style='position:relative; top:60px; left:-130px; font-size: 7em'>Human Resources</h1>
 </header>
 
 <section>
