--- a/src/Views/business.phtml
+++ b/src/Views/business.phtml
@@ -32,9 +32,12 @@
             margin-top: 10px;
             flex: 1;
             text-align: center;
-            align-items: center; /* Center the text vertically */
-            justify-content: center; /* Center the text horizontally */
-            display: flex; /* Added to enable align-items and justify-content */
+            align-items: center;
+            justify-content: center;
+            display: flex;
+            position: relative;
+            top: 60px;
+            left: -130px;
         }
 
         header img {
@@ -54,7 +57,7 @@
             flex: 1;
             text-align: center;
             padding: 20px;
-            height: 630px;
+            height: 1000px;
             position: relative;
             border-right: 4px solid #000; /* Add a black right border */
         }
