Change business.js implementation

--- a/src/Views/business.phtml
+++ b/src/Views/business.phtml
@@ -23,12 +23,12 @@
 
         <div class="col-md data-section padded">
             <h2 style="font-size: 4em; text-decoration: underline;">Total Bids</h2>
-            <p id="totalBids" style="font-size: 4em; text-decoration: underline;"></p>
+            <p id="totalBids" style="font-size: 4em;"></p>
         </div>
 
         <div class="col-md data-section padded">
             <h2 style="font-size: 4em; text-decoration: underline;">Number of current leads</h2>
-            <p id="currentLeads" style="font-size: 4em; text-decoration: underline;"></p>
+            <p id="currentLeads" style="font-size: 4em;"></p>
         </div>
     </div>
 </div>
