--- a/src/Views/business.phtml
+++ b/src/Views/business.phtml
@@ -18,7 +18,7 @@
     <div class="row">
         <div class="col-md data-section padded">
             <h2 style="font-size: 4em; text-decoration: underline;">Number of live bids</h2>
-            <p id="liveBids" style="font-size: 4em; text-decoration: underline;"></p>
+            <p id="liveBids" style="font-size: 4em;"></p>
         </div>
 
         <div class="col-md data-section padded">
